# untitled-rhythm-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat  run.bat  setup.bat
.github/: README.md
include/: BaseState.h  state.h
include/objects/: ConductorInfo.h  DebugInfo.h  FPSCounter.h  TextObject.h
include/objects/debug/: ConductorInfo.h  DebugInfo.h  FPSCounter.h
include/objects/hud/: HitErrorBar.h
include/objects/rhythm/: HoldNote.h  Note.h  Strum.h
include/rhythm/: ChartManager.h  Conductor.h  DifficultyCalculator.h  GameplayHud.h  HoldNote.h  JudgementSystem.h  Note.h  Playfield.h  Strum.h
include/states/: PlayState.h  ResultsState.h  SongSelectState.h
include/system/: AudioManager.h  Logger.h  Variables.h
include/utils/: AudioManager.h  InfoStackManager.h  Logger.h  SettingsManager.h  SkinUtils.h  Utils.h  Variables.h
include/utils/rhythm/: ChartUtils.h  OsuUtils.h  SkinUtils.h
makefiles/: check_and_copy_assets.cmake
src/: BaseState.cpp  main.cpp  state.cpp
src/impl/: stb_vorbis_impl.cpp
src/objects/: ConductorInfo.cpp  DebugInfo.cpp  FPSCounter.cpp  TextObject.cpp
src/objects/debug/: ConductorInfo.cpp  DebugInfo.cpp  FPSCounter.cpp
src/objects/hud/: HitErrorBar.cpp
src/objects/rhythm/: HoldNote.cpp  Note.cpp  Strum.cpp
src/rhythm/: ChartManager.cpp  Conductor.cpp  DifficultyCalculator.cpp  GameplayHud.cpp  HoldNote.cpp  JudgementSystem.cpp  Note.cpp  Playfield.cpp  Strum.cpp
src/states/: PlayState.cpp  ResultsState.cpp  SongSelectState.cpp
src/system/: AudioManager.cpp  Logger.cpp
src/utils/: AudioManager.cpp  InfoStackManager.cpp  Logger.cpp  OsuUtils.cpp  SettingsManager.cpp  SkinUtils.cpp  Utils.cpp
src/utils/rhythm/: ChartUtils.cpp  OsuUtils.cpp  SkinUtils.cpp
tools/: compile.bat  configure.bat
